--- a/app/views/factory/dashboard/index.html.erb
+++ b/app/views/factory/dashboard/index.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h1 class="font-bold text-4xl">Factory::Dashboard#index</h1>
-  <p>Find me in app/views/factory/dashboard/index.html.erb</p>
+  <h1 class="font-bold text-4xl">Tablero</h1>
+  <p>Aquí pondremos información del estado de la producción</p>
 </div>
