Small screen adjustments

--- a/app/views/common/components/_combobox_input.html.erb
+++ b/app/views/common/components/_combobox_input.html.erb
@@ -19,7 +19,7 @@
         "
         data-common--combobox-input-target="searchInput"
         autocomplete="false"
-        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6 <%= input_classes %>"
+        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-xs sm:leading-6 <%= input_classes %>"
         role="combobox"
         type="text"
         aria-expanded="true"
