--- a/app/views/common/components/_options_dropdown.html.erb
+++ b/app/views/common/components/_options_dropdown.html.erb
@@ -9,7 +9,7 @@
   data-common--options-dropdown-left-position-class="right-0"
   data-common--options-dropdown-right-position-class="left-0"
   data-common--options-dropdown-top-position-class="bottom-8"
-  data-common--options-dropdown-button-open-class="bg-lightGray-100"
+  data-common--options-dropdown-button-open-class="bg-light-gray-100"
   data-common--options-dropdown-menu-close-class="opacity-0 scale-95"
   data-common--options-dropdown-menu-open-class="opacity-100 scale-100"
 >
@@ -17,7 +17,7 @@
     <div>
       <button
         type="button"
-        class="flex items-center rounded-full hover:bg-lightGray-100 text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500"
+        class="flex items-center rounded-full hover:bg-light-gray-100 text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-500"
         id="<%= unique_id %>"
         aria-expanded="true"
         aria-haspopup="true"
