--- a/app/views/factory/formulas/show.html.erb
+++ b/app/views/factory/formulas/show.html.erb
@@ -24,7 +24,7 @@
         { label: Formula.human_attribute_name(:alloy), value: @formula.alloy },
       ]
     ) %>
-    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+    <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
       <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
     </div>
     <ul role="list" class="-mb-8">
@@ -75,7 +75,7 @@
   </div>
   <div class="flow-root">
     <div>
-      <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+      <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
         <h3 class="text-base font-semibold text-gray-900">Ingredientes</h3>
       </div>
       <%= pie_chart(
