--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -50,23 +50,23 @@
                 </ul>
               </li>
               <li>
-                <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
+                <div class="text-xs font-semibold leading-6 text-light-blue">Departamentos</div>
                 <ul role="list" class="-mx-2 mt-2 space-y-1">
                   <li>
-                    <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
-                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                    <!-- Current: "bg-blue-700 text-white", Default: "text-light-blue hover:text-white hover:bg-blue-700" -->
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                       <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">H</span>
                       <span class="truncate">Oficina</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                       <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">T</span>
                       <span class="truncate">Ventas</span>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                    <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                       <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">W</span>
                       <span class="truncate">Fábrica</span>
                     </a>
@@ -97,23 +97,23 @@
             </ul>
           </li>
           <li class="mt-auto">
-            <div class="text-xs font-semibold leading-6 text-lightBlue">Departamentos</div>
+            <div class="text-xs font-semibold leading-6 text-light-blue">Departamentos</div>
             <ul role="list" class="-mx-2 mt-2 space-y-1">
               <li>
-                <!-- Current: "bg-blue-700 text-white", Default: "text-lightBlue hover:text-white hover:bg-blue-700" -->
-                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                <!-- Current: "bg-blue-700 text-white", Default: "text-light-blue hover:text-white hover:bg-blue-700" -->
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                   <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">O</span>
                   <span class="truncate">Oficina</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                   <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">V</span>
                   <span class="truncate">Ventas</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-lightBlue hover:bg-blue-700 hover:text-white">
+                <a href="#" class="group flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 text-light-blue hover:bg-blue-700 hover:text-white">
                   <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-blue bg-blue-300 text-[0.625rem] font-medium text-white">F</span>
                   <span class="truncate">Fábrica</span>
                 </a>
@@ -144,7 +144,7 @@
   <div class="sticky top-0 z-40 flex items-center gap-x-6 bg-blue-700 px-4 py-4 shadow-sm sm:px-6 lg:hidden">
     <button
       type="button"
-      class="-m-2.5 p-2.5 text-lightBlue"
+      class="-m-2.5 p-2.5 text-light-blue"
       data-action="common--sidebar-menu#open"
     >
       <span class="sr-only">Open sidebar</span>
