--- a/app/views/common/components/_combobox_option.html.erb
+++ b/app/views/common/components/_combobox_option.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (id:, value:)  %>
 
 <li
-  class="relative cursor-pointer select-none py-1.5 pl-3 pr-9 text-xs text-gray-900 hover:bg-lightGray-100 focus:outline-none focus:bg-lightBlue-300"
+  class="relative cursor-pointer select-none py-1.5 pl-3 pr-9 text-xs text-gray-900 hover:bg-light-gray-100 focus:outline-none focus:bg-light-blue-300"
   role="option"
   tabindex="0"
   data-action="
