--- a/app/views/factory/formula_elements/_form.html.erb
+++ b/app/views/factory/formula_elements/_form.html.erb
@@ -12,7 +12,7 @@
         <%= form.check_box :infinite, data: { controller: "input" }, hidden: true %>
         <button
           type="button"
-          class="group relative flex h-7 w-14 cursor-pointer rounded-full bg-lightGray p-1 transition-colors duration-200 ease-in-out focus:outline-none data-[focus]:outline-1 data-[focus]:outline-blue data-[checked]:bg-blue"
+          class="group relative flex h-7 w-14 cursor-pointer rounded-full bg-light-gray p-1 transition-colors duration-200 ease-in-out focus:outline-none data-[focus]:outline-1 data-[focus]:outline-blue data-[checked]:bg-blue"
           role="switch"
           data-controller="common--switch"
           data-action="common--switch#toggle"
