--- a/app/views/factory/formula_elements/show.html.erb
+++ b/app/views/factory/formula_elements/show.html.erb
@@ -21,7 +21,7 @@
       ]
     ) %>
     <div>
-      <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+      <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
         <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
       </div>
       <ul role="list" class="-mb-8">
@@ -72,7 +72,7 @@
     </div>
   </div>
   <div class="flow-root">
-    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+    <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
       <h3 class="text-base font-semibold text-gray-900">Proveedores</h3>
     </div>
     <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
