--- a/app/views/factory/formulas/_form.html.erb
+++ b/app/views/factory/formulas/_form.html.erb
@@ -41,7 +41,7 @@
         data-controller="common--nested-form"
         data-common--nested-form-deleted-class="text-red line-through italic"
       >
-        <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+        <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
           <h3 class="text-base font-semibold text-gray-900">Ingredientes</h3>
         </div>
         <!-- Template for new formula item -->
