--- a/app/views/factory/formulas/_formula_item_fields.html.erb
+++ b/app/views/factory/formulas/_formula_item_fields.html.erb
@@ -3,7 +3,7 @@
 <% marked_for_destruction = formula_item.persisted? && formula_item.marked_for_destruction? %>
 <div
   data-common--nested-form-target="item" data-item-id="<%= formula_item.id || "" %>"
-  class="grid grid-cols-[1fr,auto,auto] gap-x-6 gap-y-8 <%= marked_for_destruction ? "text-red line-through italic" : "" %>"
+  class="grid grid-cols-[1fr_80px_auto] gap-x-6 gap-y-8 <%= marked_for_destruction ? "text-red line-through italic" : "" %>"
 >
   <%= form.fields_for :formula_items, formula_item, child_index: child_index do |ff| %>
     <%= ff.hidden_field :id if formula_item.persisted? %>
@@ -38,7 +38,7 @@
     </div>
 
     <button type="button" class="group" data-action="common--nested-form#removeItem">
-      <%= heroicon("trash", options: { class: "h-4 w-4 shrink-0 transition text-lightRed group-hover:text-red" }) %>
+      <%= heroicon("trash", options: { class: "h-4 w-4 shrink-0 transition text-light-red group-hover:text-red" }) %>
     </button>
   <% end %>
 </div>
