--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -43,7 +43,7 @@
 
     <%= turbo_frame_tag "formulas_table" do %>
       <div class="inline-block min-w-full py-2 align-middle">
-        <table id="formulas" class="min-w-full divide-y divide-lightGray-900">
+        <table id="formulas" class="min-w-full divide-y divide-light-gray-900">
           <thead>
             <tr>
               <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
@@ -69,7 +69,7 @@
               </th>
             </tr>
           </thead>
-          <tbody class="divide-y divide-lightGray">
+          <tbody class="divide-y divide-light-gray">
             <% @formulas.each do |formula| %>
               <tr id="<%= dom_id formula %>">
                 <td class="whitespace-nowrap px-3 py-3 text-center text-sm text-gray-900">
