--- a/app/views/factory/making_orders/_form.html.erb
+++ b/app/views/factory/making_orders/_form.html.erb
@@ -34,7 +34,7 @@
         data-controller="common--nested-form"
         data-common--nested-form-deleted-class="text-red line-through italic"
       >
-        <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+        <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
           <h3 class="text-base font-semibold text-gray-900"><%= Product.model_name.human(count: 2) %></h3>
         </div>
         <!-- Template for new making order item -->
