--- a/app/views/factory/products/show.html.erb
+++ b/app/views/factory/products/show.html.erb
@@ -32,7 +32,7 @@
         { label: Product.human_attribute_name(:price), value: number_to_currency(@product.price) },
       ]
     ) %>
-    <div class="border-b border-lightGray-500 bg-white py-6 mb-6">
+    <div class="border-b border-light-gray-500 bg-white py-6 mb-6">
       <h3 class="text-base font-semibold text-gray-900">Historial de cambios</h3>
     </div>
     <ul role="list" class="-mb-8">
