--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -8,7 +8,7 @@
 -%>
 <% wrapper_class = "relative inline-flex items-center rounded-r-md px-2 py-2 ring-1 ring-inset ring-gray-300 focus:z-20 focus:outline-offset-0" %>
 <% if current_page.last? -%>
-  <span class="<%= wrapper_class %> text-lightGray">
+  <span class="<%= wrapper_class %> text-light-gray">
     <span class="sr-only"><%= t("views.pagination.next") %></span>
     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
       <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
@@ -18,7 +18,7 @@
   <%= link_to(
     url,
     rel: "next",
-    class: "#{wrapper_class} text-gray-300 hover:bg-lightGray",
+    class: "#{wrapper_class} text-gray-300 hover:bg-light-gray",
     data: { turbo_action: "advance" },
   ) do %>
     <span class="sr-only"><%= t("views.pagination.next") %></span>
