--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -8,7 +8,7 @@
 -%>
 <% wrapper_class = "relative inline-flex items-center rounded-l-md px-2 py-2 ring-1 ring-inset ring-gray-300 focus:z-20 focus:outline-offset-0" %>
 <% if current_page.first? -%>
-  <span class="<%= wrapper_class %> text-lightGray">
+  <span class="<%= wrapper_class %> text-light-gray">
     <span class="sr-only"><%= t("views.pagination.previous") %></span>
     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
       <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
@@ -18,7 +18,7 @@
   <%= link_to(
     url,
     rel: "prev",
-    class: "#{wrapper_class} text-gray-300 hover:bg-lightGray",
+    class: "#{wrapper_class} text-gray-300 hover:bg-light-gray",
     data: { turbo_action: "advance" },
   ) do %>
     <span class="sr-only"><%= t("views.pagination.previous") %></span>
