--- a/app/views/factory/formula_elements/new.html.erb
+++ b/app/views/factory/formula_elements/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "common/headings/page",
   title: t("titles.formula_element.new"),
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("navigation.dashboard"), path: factory_root_path },
     { title: t("titles.formula_element.index"), path: factory_formula_elements_path },
     { title: t("navigation.new"), path: new_factory_formula_element_path },
   ] %>
