--- a/app/views/factory/formula_elements/edit.html.erb
+++ b/app/views/factory/formula_elements/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render(
   "common/headings/page",
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("navigation.dashboard"), path: factory_root_path },
     { title: t("titles.formula_element.index"), path: factory_formula_elements_path },
     { title: @formula_element.name, path: factory_formula_element_path(@formula_element) },
     { title: t("navigation.edit"), path: edit_factory_formula_element_path(@formula_element) },
