--- a/app/views/factory/formulas/index.html.erb
+++ b/app/views/factory/formulas/index.html.erb
@@ -4,7 +4,7 @@
     { label: t("navigation.new"), path: new_factory_formula_path, method: :get },
   ],
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("navigation.dashboard"), path: factory_root_path },
     { title: t("titles.formula.index"), path: factory_formulas_path },
   ] %>
 
