--- a/app/views/factory/making_orders/index.html.erb
+++ b/app/views/factory/making_orders/index.html.erb
@@ -4,7 +4,7 @@
     { label: t("navigation.new"), path: new_factory_making_order_path, method: :get },
   ],
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: factory_dashboard_index_path },
+    { title: t("navigation.dashboard"), path: factory_root_path },
     { title: t("titles.making_order.index"), path: factory_making_orders_path },
   ] %>
 
