--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,8 @@
       <% if authenticated? %>
         <%= render 'application/sidebar' %>
       <% end %>
-      <main class="py-10 <%= 'lg:pl-72' if authenticated? %>">
-        <div class="px-4 sm:px-6 lg:px-8">
+      <main class="py-10 <%= 'xl:pl-72' if authenticated? %>">
+        <div class="px-4 sm:px-6 xl:px-8">
           <%= render 'common/flash' %>
           <%= yield %>
         </div>
