Improve user input safety

--- a/app/views/office/clients/show.html.erb
+++ b/app/views/office/clients/show.html.erb
@@ -32,7 +32,7 @@
           label: Client.human_attribute_name(:address),
           block: -> {
             if @client.maps_url.present?
-              link_to(@client.maps_url, class: "flex items-center gap-2", target: "_blank") do
+              link_to(safe_url(@client.maps_url), class: "flex items-center gap-2", target: "_blank") do
                 heroicon("map-pin", options: { class: "h-4 w-4 shrink-0 transition text-gray-300 hover:text-gray-700" }) +
                 @client.address
               end
