--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -14,13 +14,14 @@
 @media print {
   html {
     font-family: Tahoma, Helvetica, sans-serif;
-    font-size: 8px;
+    font-size: 16px;
     display: block;
     transition: 0s;
   }
 
   body {
     background-color: #fff;
+    padding: 4px;
   }
 
   .web {
