--- a/app/views/factory/making_orders/_making_order_item_fields.html.erb
+++ b/app/views/factory/making_orders/_making_order_item_fields.html.erb
@@ -1,4 +1,4 @@
-<%# locals: (child_index: nil, form:, making_order_item:, products:)  %>
+<%# locals: (child_index: nil, form:, making_order_item:)  %>
 
 <% marked_for_destruction = making_order_item.persisted? && making_order_item.marked_for_destruction? %>
 <div
