--- a/app/views/factory/products/new.html.erb
+++ b/app/views/factory/products/new.html.erb
@@ -9,5 +9,5 @@
 ) %>
 
 <div class="w-full">
-  <%= render "form", product: @product, formulas: @formulas %>
+  <%= render "form", product: @product %>
 </div>
