--- a/app/views/factory/making_orders/edit.html.erb
+++ b/app/views/factory/making_orders/edit.html.erb
@@ -21,5 +21,5 @@
 ) %>
 
 <div class="w-full">
-  <%= render "form", making_order: @making_order, products: @products %>
+  <%= render "form", making_order: @making_order %>
 </div>
