--- a/app/views/factory/making_orders/new.html.erb
+++ b/app/views/factory/making_orders/new.html.erb
@@ -9,5 +9,5 @@
 ) %>
 
 <div class="w-full">
-  <%= render "form", making_order: @making_order, products: @products %>
+  <%= render "form", making_order: @making_order %>
 </div>
