--- a/app/views/factory/products/edit.html.erb
+++ b/app/views/factory/products/edit.html.erb
@@ -21,5 +21,5 @@
 ) %>
 
 <div class="w-full">
-  <%= render "form", product: @product, formulas: @formulas %>
+  <%= render "form", product: @product %>
 </div>
